# music-mate

./: .gitignore  code-stats.txt  package.json
back-end/: Cargo.toml
back-end/music_mate_api_rs/: Cargo.toml
back-end/music_mate_api_rs/src/: main.rs
backend/infrastructure/: app.py  requirements.txt
backend/infrastructure/stacks/: chaliceapp.py
backend/runtime/: app.py  requirements.txt
backend/runtime/.chalice/: config.json
backend/runtime/chalicelib/: Secrets.py  Song.py  User.py
front-end/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
front-end/src/: index.html  index.tsx  style.css
front-end/src/components/: index.tsx
front-end/src/components/Common/: index.tsx  slide-up.tsx
front-end/src/components/EmojiPicker/: EmojiPicker.tsx
front-end/src/components/MessageList/: MessageList.tsx  MessageListItem.tsx  index.tsx
front-end/src/components/Messages/: MessageItemBadge.tsx  MessageItemSong.tsx  MessagesBody.tsx  MessagesFooter.tsx  MessagesHeader.tsx  index.tsx
front-end/src/components/Modal/: Modal.tsx
front-end/src/components/Profile/: ProfileCard.tsx  ProfileCards.tsx  ProfileImage.tsx  ProfileTitle.tsx  cards-list.tsx  cards.tsx  index.tsx  title-bar.tsx
front-end/src/components/SongPicker/: SongPicker.tsx  (+2 more)
front-end/src/config/: api.ts  cognito.ts
front-end/src/context/: UserContext.tsx
front-end/src/data/: chat.ts  fetchers.ts  message.ts  profile.ts  song.ts  user.ts
front-end/src/routes/: Home.tsx  Junk  Messages.tsx  Profile.tsx  SignUp.tsx  Welcome.tsx  home.tsx  index.tsx
(+18 files in other folders)
