[package]
name = "music_mate_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-redis = "0.9.2"
redis-async = "0.11.0"
sqlx = { version = "0.5.5", features = [ "runtime-async-std-rustls", "postgres", "macros", "offline" ] }
log = "0.4.14"
env_logger = "0.8.4"
dotenv = "0.15.0"
